{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 69,
  "lineage": "9a366252-8168-f1f3-21ee-092bd28e044b",
  "resources": [
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9569868786b23a",
            "arn": "arn:aws:ec2:ap-south-1:136380264554:instance/i-0f50a8d639603534b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f50a8d639603534b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kusum",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-036fc6e049a1df1ca",
            "private_dns": "ip-192-168-0-14.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.14",
            "public_ip": "13.127.173.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a6d29a90c2b103a1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cdaabb292741b0dd",
            "tags": {
              "name": "example-instance"
            },
            "tags_all": {
              "name": "example-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f9157b3701c3f36"
            ]
          },
          "dependencies": [
            "module.my_ec2_instance.aws_security_group.security_group_ec2",
            "module.my_ec2_instance.aws_subnet.public_subnet",
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:internet-gateway/igw-07fabe9da0a9081af",
            "id": "igw-07fabe9da0a9081af",
            "owner_id": "136380264554",
            "tags": {
              "name": "Internet Gateway"
            },
            "tags_all": {
              "name": "Internet Gateway"
            },
            "vpc_id": "vpc-02e574358da1e8d9d"
          },
          "dependencies": [
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:route-table/rtb-078ecff3967352114",
            "id": "rtb-078ecff3967352114",
            "owner_id": "136380264554",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fabe9da0a9081af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02e574358da1e8d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_ec2_instance.aws_internet_gateway.ig",
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ed2f0a9658d933",
            "route_table_id": "rtb-078ecff3967352114",
            "subnet_id": "subnet-0cdaabb292741b0dd"
          },
          "dependencies": [
            "module.my_ec2_instance.aws_internet_gateway.ig",
            "module.my_ec2_instance.aws_route_table.route_table",
            "module.my_ec2_instance.aws_subnet.public_subnet",
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:security-group/sg-08f9157b3701c3f36",
            "description": "EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f9157b3701c3f36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2 Security",
            "name_prefix": "",
            "owner_id": "136380264554",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02e574358da1e8d9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:subnet/subnet-0cbbd0ca034a129e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbbd0ca034a129e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136380264554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "Private VPC"
            },
            "tags_all": {
              "name": "Private VPC"
            },
            "vpc_id": "vpc-02e574358da1e8d9d"
          },
          "dependencies": [
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:subnet/subnet-0cdaabb292741b0dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdaabb292741b0dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136380264554",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": " Public VPC"
            },
            "tags_all": {
              "name": " Public VPC"
            },
            "vpc_id": "vpc-02e574358da1e8d9d"
          },
          "dependencies": [
            "module.my_ec2_instance.aws_vpc.ec2_all_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_ec2_instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ec2_all_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:136380264554:vpc/vpc-02e574358da1e8d9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-092b2e984589168da",
            "default_route_table_id": "rtb-0a5918f20d8ac8284",
            "default_security_group_id": "sg-0bd7f963679d549ef",
            "dhcp_options_id": "dopt-005393c7ce4d59322",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02e574358da1e8d9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5918f20d8ac8284",
            "owner_id": "136380264554",
            "tags": {
              "name": "VPC For Ec2"
            },
            "tags_all": {
              "name": "VPC For Ec2"
            }
          }
        }
      ]
    }
  ]
}